--- a/view/shared/foot.html
+++ b/view/shared/foot.html
@@ -1,6 +1,6 @@
 <hr align="left" color="black" width="100%" />
 
-Copyright &copy; <TMPL_VAR NAME="copyright_year"> <TMPL_VAR NAME="copyright_holder">.
+Copyright &copy; <tmpl_var copyright_year> <tmpl_var copyright_holder>.
 <br />
 
 <div id="blueimp-gallery" class="custom-blueimp blueimp-gallery blueimp-gallery-controls">
