--- a/view/shared/heading-with-dropdown.html
+++ b/view/shared/heading-with-dropdown.html
@@ -1,8 +1,8 @@
 <h1>
   <div class="dropdown-header-title">
-    <TMPL_VAR NAME="title" />
+    <tmpl_var title />
   </div>
   <div class="dropdown-header-button">
-    <TMPL_INCLUDE NAME="dropdown-button.html" />
+    <tmpl_include name="dropdown-button.html" />
   </div>
 </h1>
