--- a/view/shared/navbar.html
+++ b/view/shared/navbar.html
@@ -6,7 +6,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light custom-navbar"
      style="background-color: #DFF2FD;">
-  <a class="navbar-brand" href="../../g/m/home.html">
+  <a class="navbar-brand" href="/">
     <img src="../../pics/ms-icon-144x144.png" width="30" height="30" alt="">
   </a>
 
