Fix errant colon in reference links
when the <reference> does not have a type attribute

--- a/view/reference/single/full.html
+++ b/view/reference/single/full.html
@@ -1,4 +1,6 @@
-<tmpl_var type />:
+<tmpl_if type>
+  <tmpl_var type />:
+</tmpl_if>
 
 <tmpl_if url>
   <a href="<tmpl_var url escape=none />"><tmpl_var name /></a>
