Add support for WAV files

--- a/view/picture/single.html
+++ b/view/picture/single.html
@@ -5,6 +5,9 @@
   <tmpl_if is_picture>
     <tmpl_include single/picture.html />
   </tmpl_if>
+  <tmpl_if is_sound>
+    <tmpl_include single/sound.html />
+  </tmpl_if>
   <tmpl_if html>
     <tmpl_var html escape=none />
   </tmpl_if>
